# test-gh-actions

./: .gitignore  pyproject.toml
.github/workflows/: python-publish.yml
src/test-gh-actions/: example.py
