[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/test-gh-actions"]

[project]
name = "test-gh-actions-synkied"
version = "0.0.1"
authors = [
  { name="Synkied", email="synkx@hotmail.fr" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "build>=1.3.0",
    "twine>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/pypa/test-gh-actions"
Issues = "https://github.com/pypa/test-gh-actions/issues"
